@@ -1,14 +1,14 @@
 Package: asht
 Type: Package
 Title: Applied Statistical Hypothesis Tests
-Version: 0.8
-Date: 2017-02-06
+Version: 0.9
+Date: 2017-04-01
 Author: Michael P. Fay
 Maintainer: Michael P. Fay <mfay@niaid.nih.gov>
-Description: Some hypothesis test functions (sign test, median and other quantile tests, Wilcoxon signed rank test, coefficient of variation test, test of normal variance, test on weighted sums of Poisson) with a focus on non-asymptotic methods that have matching confidence intervals. 
+Description: Some hypothesis test functions (sign test, median and other quantile tests, Wilcoxon signed rank test, coefficient of variation test, test of normal variance, test on weighted sums of Poisson, sample size for t-tests with different variances and non-equal n per arm, Behrens-Fisher test) with a focus on non-asymptotic methods that have matching confidence intervals. 
 License: GPL-3
 Depends: stats, exact2x2, exactci, bpcp, ssanv, coin
 NeedsCompilation: no
-Packaged: 2017-02-06 20:57:04 UTC; faym
+Packaged: 2017-04-03 13:39:02 UTC; faym
 Repository: CRAN
-Date/Publication: 2017-02-07 10:08:39
+Date/Publication: 2017-04-03 15:30:52 UTC
