@@ -1,14 +1,18 @@
-018328b874514b2f41d7c83bb25eb8e7 *DESCRIPTION
-04f2836c14db8b77e115ab85d1121268 *NAMESPACE
+ed83f1b90ddca8886f4fb4ff654dbbee *DESCRIPTION
+b9b81cb992650aa34ee36f171b2950a0 *NAMESPACE
+2ea1c879f8da3e1ce03750a3b2f2141b *R/bfTest.R
 cccc310a253727ebea5d8c653bb1a033 *R/cvTest.R
 bda45415259ef112d8ce48e5362405d2 *R/quantileTest.R
 b7711cc595966697e37e1c3a50d03c1c *R/signTest.R
 fd29c60ae46915eba59c7df2b9727d69 *R/var1Test.R
 90b7397a0bf6c4881d23c66772c26923 *R/wspoissonTest.R
 2d5a645a6dc2c48f121fdb59799b580d *R/wsrTest.R
-bb617c12ee268aa030cf37a4ee9b80ca *inst/NEWS.Rd
-d4a15f28010d6ac2653da6726b5e5232 *man/asht-package.Rd
+f48673b4417ca0ae91a05a906b90ddda *inst/NEWS.Rd
+93eefd705af9aadc12dc0fe081257721 *man/asht-package.Rd
+89ef0a27bde43b2448b9b61d534ab0c9 *man/bfControl.Rd
+674aceb6fd2c739d270253059f1f581e *man/bfTest.Rd
 a5ac45714756649532711311dbd8ebfb *man/cvTest.Rd
+f88167ee22b85717537f25fd72754f4c *man/pbf.Rd
 9cc654d835dcbbae6e90ebf782a4d56d *man/quantileTest.Rd
 2b7d4c4b08cf5373826e0e2fb21d020e *man/signTest.Rd
 24a101d525cec262cd9dcdac8151b614 *man/var1Test.Rd
